--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,20 +9,20 @@
 
 <body>
   <header>
-    <h1>[White Water Rafting] Site Plan</h1>
-    <h2>[Jose Machuca]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>White Water Rafting Site Plan</h1>
+    <h2>Jose Machuca</h2>
+    <h2>WDD 130-08</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
     <!-- ------------------------Steps 2-5------------------------------ -->
     <hr />
     <h2>Overview</h2>
-    <h3>It's time to get ready for some fun spring/summer trips. Here at the Dry Oar White Rafting company, we are here
+    <h3>Purpose</h3>
+    <p>It's time to get ready for some fun spring/summer trips. Here at the Dry Oar White Rafting company, we are here
       to help you make the best trip you'll never forget. We Pride ourselves on providing the best service when it comes
       to knowing when and where you can do White Rafting, understanding the basics, and so much more! We are looking
-      forward to helping you the best we can.</h3>
-    <p>[Your purpose here]</p>
+      forward to helping you the best we can.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
@@ -35,7 +35,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="https://byui-wdd.github.io/wdd130/resources/images/logos/Picture1.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -47,7 +47,7 @@
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
     <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      target="_blank">https://coolors.co/4b9ab6-324376-f5dd90-5a391d-aabd8c</a>
 
     <table class="colors">
       <tr>
@@ -58,10 +58,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">#4B9AB6</td>
+        <td class="secondary">#324376</td>
+        <td class="accent1">#F5DD90</td>
+        <td class="accent2">#5A391D</td>
       </tr>
     </table>
 
@@ -71,11 +71,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Mochiy Pop P One
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Anton&family
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
