--- a/wwr/index.html
+++ b/wwr/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
 </head>
 
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.jpg" alt="Dry oar Logo">
@@ -64,7 +66,7 @@
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
-        <a href="https://facebook.com">
+        <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
         </a>
         <a href="https://twitter.com">
@@ -75,5 +77,6 @@
         </a>
     </div>
 </footer>
+
 
 </html>
