updated white water page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -50,33 +50,33 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
         <section class="msg">
             <h2>More Than JUST the Thrill </h2>
-            <p>Enjoy the <strong>breathtaking</strong> scenery.From Valleys, meadows, canyons, and high peaks; it's way
-                more than just the rapids.
-                it's a great way to get away from it all and relax amongst all the beauty of the <strong>great
-                    outdoors</strong></p>
+            <p>Enjoy the <strong>breathtaking</strong> scenery.From Valleys, meadows, canyons, and high peaks; it's way more than just the rapids. it's a great way to get away from it all and relax amongst all the beauty of the <strong>great outdoors</strong></p>
             <a class='join' href="rivers.html"><strong>Join Us</strong></a>
         </section>
     </main>
 </body>
-<footer>
-    <p>Dry Oar &copy; 2022 - Jose Machuca</p>
-    <p><a href="site-plan-rafting.html">Site Plan</a></p>
-    <p><a href="contactus.html">Contact Us</a></p>
-    <div class="social">
-        <a href="https://facebook.com" target="_blank">
-            <img src="images/facebook.png" alt="fb icon">
-        </a>
-        <a href="https://twitter.com">
-            <img src="images/twitter.png" alt="twitter icon">
-        </a>
-        <a href="https://instagram.com">
-            <img src="images/instagram.png" alt="instagram icon">
-        </a>
+    <footer>
+        <p>Dry Oar &copy; 2022 - Jose Machuca</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
     </div>
-</footer>
+</body>
 
 
 </html>
