--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,6 +9,7 @@
 
 <body>
   <header>
+    <a style="color: white;"style="text-decoration: none;" href="index.html">Home</a>
     <h1>White Water Rafting Site Plan</h1>
     <h2>Jose Machuca</h2>
     <h2>WDD 130-08</h2>
