--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,10 +16,10 @@
             <img class="logo" src="images/logo.jpg" alt="Dry oar Logo">
         </a>
         <nav>
-            <a href="index.html"style="text-decoration: none;">Home</a>
-            <a href="#"style="text-decoration: none;">Page 2</a>
-            <a href="site-plan-rafting.html"style="text-decoration: none;">Site Plan</a>
-            <a href="contactus.html"style="text-decoration: none;">Contact Us</a>
+            <a href="index.html" >Home</a>
+            <a href="#" >Page 2</a>
+            <a href="site-plan-rafting.html" >Site Plan</a>
+            <a href="contactus.html" >Contact Us</a>
         </nav>
     </header>
     <div id="hero">
@@ -30,7 +30,7 @@
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Dry Oar</h4>
             <div class='button-box'>
-                <a class='book' href="rates.html"style="text-decoration: none;">Book Now</a>
+                <a class='book' href="rates.html" >Book Now</a>
             </div>
         </section>
     </div>
@@ -55,15 +55,15 @@
         <section class="msg">
             <h2>More Than JUST the Thrill </h2>
             <p>Enjoy the <strong>breathtaking</strong> scenery.From Valleys, meadows, canyons, and high peaks; it's way more than just the rapids. it's a great way to get away from it all and relax amongst all the beauty of the <strong>great outdoors</strong></p>
-            <a class='join' href="rivers.html"style="text-decoration: none;"><strong>Join Us</strong></a>
+            <a class='join' href="rivers.html" ><strong>Join Us</strong></a>
         </section>
     </main>
     <footer>
         <p>Dry Oar &copy; 2022 - Jose Machuca</p>
-        <p><a href="site-plan-rafting.html"style="text-decoration: none;">Site Plan</a></p>
-        <p><a href="contactus.html"style="text-decoration: none;">Contact Us</a></p>
+        <p><a href="site-plan-rafting.html" >Site Plan</a></p>
+        <p><a href="contactus.html" >Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com" style="text-decoration: none;" target="_blank">
+            <a href="https://facebook.com"   target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com"target="_blank">
