--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -125,7 +125,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Contact Us</h3>
+
+    <img src="images/contact us.png" alt="contact_us">
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
