content to webpage

--- a/personal-site/site-plan.html
+++ b/personal-site/site-plan.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>introduction to Jose Machuca Site Plan</h1>
+      <h1>Magic Touch Landscaping INC. Site Plan</h1>
       <h2>Jose Machuca</h2>
       <h2>WDD 130-08</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
@@ -21,17 +21,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this website is to present a well done professinal resume of my education and work experience. This web site will show my skills and background of my ability to work at companies. Also this website will show my employers my ability my web ability.</p>  <!-- change this -->
+      <p>Magic Touch Landscaping INC. is focused on helping others be able to have a wonderful yard/home. We here at magic touch focus one the small and simple things in life and that is having the best yard and property. We pride in grass cutting, mulching, spring cleanup,Leaf removal, weed removal, and ohter types of yard care.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>This website is those that are interested in hiring me or those that wanting to have a better background of who I am. This is for people who are interested to understand my abilities for both IT work and my web development skills</p>  <!-- change this -->
+      <p>This website is for people who are ready to make they're yard look amazing. We intive all those who are  wanting to expand their yard to a new level of Beauty. We are excited to help and assits anyone who is happy and excited.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/JOSE MACHUCA.png" alt="Logo image">
+      <img src="images/Magic Touch.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -45,13 +45,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/f7f9f9-bed8d4-78d5d7-63d2ff-2081c3" target="_blank">https://coolors.co/f7f9f9-bed8d4-78d5d7-63d2ff-2081c3</a>
+      Palette URL: <a href="https://coolors.co/255822-2c4e4c-d6bb08-542d2b" target="_blank">https://coolors.co/255822-2c4e4c-d6bb08-542d2b</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">#F7F9F9</td><td class="secondary">#BED8D4</td><td class="accent1">#78D5D7</td><td class="accent2">#63D2FF</td></tr>
+        <tr><td class="primary">#255822</td><td class="secondary">#2C4E4C</td><td class="accent1">#D6BB08</td><td class="accent2">#542D2B</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -125,29 +125,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        -Wanting a change how people view your home on the outside? -Any time of the year, Magic touch is devoted to help those who are wanting to make a difference on their property. We don't just do the basics, we do what-ever it takes so that your home will look the way you always wanted it to be! -focusing on perfection is our skill -over the last 15 years, we have devoted on making sure that every job is left to Perfection. we strive and invite all form of work. We do from the small and simple leaves removal to the hard and exciteing work of tree removal. -All seasons of the year is the name of the Game. -It may seem like landscaping is only for a certain time of year, but here at Magic touch Landscaping, We believe in having work done all time of the year. From our Summer cut, Fall leaves pickup speical, Winter soval, to the best of all, our spring cleanup season! Magic touch is commited to ensure your home will always remain ALL YEAR round. 
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/pexels-mike-b-145685-1000x 500.jpg" alt="image for homepage">
+        <img src="images/rocks-1000x500.jpeg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Reference Page</h3>
       <p>
-        [Written copy for the Page 2 here]
+        On This Page, we will be showing our clients some reference work we have done in the past. As well on this page we will show some common/popular things that people like to do when they want new styles of their home. Also this page will give specific list of our work. Things like mualching, grass cutting, weed removal, tree cutting, bush trimming, common spring clean up, leave removal. and so much more!!!
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/mulch_colors.jpg" alt="image for page">
+        <img src="images/reference_page-500 x 800.png" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contact Us</h3>
       <p>
-        [Written copy for the Page 3 here]
+        On this part of the website, we are focusing on the contact us. We will have contact information also we will be able to have the location of the office. This part of the website will have all our contact information with phone number and our email address.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/pexels-mali-maeder-68470-1000 x 500.jpg" alt="image for page3">
+        <img src="images/pexels-tirachard-kumtanom-450064-800 x 400.jpg" alt="image for page3">
 
       </ul>
       <hr>
