--- a/wwr/index.html
+++ b/wwr/index.html
@@ -17,15 +17,15 @@
         </a>
         <nav>
             <a href="index.html" >Home</a>
-            <a href="#" >Page 2</a>
+            <a href="blog.html" >Blog </a>
             <a href="site-plan-rafting.html" >Site Plan</a>
-            <a href="contactus.html" >Contact Us</a>
+            <a href="contact-us.html" >Contact Us</a>
         </nav>
     </header>
     <div id="hero">
         <div id="hero-box">
             <img id="hero-img" src="images/hero.png" alt="people enjoying white water rafting">
-        </div>
+        </div>  
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Dry Oar</h4>
