--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -125,9 +125,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>Contact Us</h3>
+    <h3>Blog </h3>
 
-    <img src="images/contact us.png" alt="contact_us">
+    <img src="images/wire_frame.png" alt="contact_us">
     <p>https://wireframe.cc/x5943r</p>
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
