trying to make this work

--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,13 +37,13 @@
     <!-- main body of the website -->
 <main class="home-grid">
     
-        <section id="mission-statement">
+        <section class="mission-statement">
             <h2>Mission statement:</h2>
             <p>Magic Touch Landscaping INC. is focused on helping others be able to have a wonderful yard/home. We here at magic touch focus one the small and simple things in life and that is having the best yard and property. We pride in grass cutting, mulching, spring cleanup,Leaf removal, weed removal, and other types of yard care. </p>
         </section>
     
-        <section id="yard_work">
-            <img src="images/rocks-1000x500.jpeg" alt="rocks in photo">
+        <section class="yard_work">
+            <img class="rocks" src="images/rocks-1000x500.jpeg" alt="rocks in photo">
             <h1>What we strive for!</h1>
             <ul>
                 <li>Any time of the year, Magic touch is devoted to help those who are wanting to make a difference on their property. We don't just do the basics, we do what-ever it takes so that your home will look the way you always wanted it to be! </li>
