css for personal site

--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -44,12 +44,14 @@
     
         <section class="yard_work">
             <img class="rocks" src="images/rocks-1000x500.jpeg" alt="rocks in photo">
+            <section class="msg2">
             <h1>What we strive for!</h1>
             <ul>
                 <li>Any time of the year, Magic touch is devoted to help those who are wanting to make a difference on their property. We don't just do the basics, we do what-ever it takes so that your home will look the way you always wanted it to be! </li>
                 <li>focusing on perfection is our skill; over the last 15 years, we have devoted on making sure that every job is left to Perfection. we strive and invite all form of work. We do from the small and simple leaves removal to the hard and exciting work of tree removal. </li>
                 <li>It may seem like landscaping is only for a certain time of year, but here at Magic touch Landscaping, We believe in having work done all time of the year. From our Summer cut, Fall leaves pickup special, Winter shovel, to the best of all, our spring cleanup season! Magic touch is committed to ensure your home will always remain ALL YEAR round.</li>
             </ul>
+        </section>
         </section>
 </main>
 
