--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -36,16 +36,18 @@
 
     <!-- main body of the website -->
 <main class="home-grid">
-    
+        <div id="mission">    
         <section class="mission-statement">
             <h2>Mission statement:</h2>
             <p>Magic Touch Landscaping INC. is focused on helping others be able to have a wonderful yard/home. We here at magic touch focus one the small and simple things in life and that is having the best yard and property. We pride in grass cutting, mulching, spring cleanup,Leaf removal, weed removal, and other types of yard care. </p>
         </section>
-    
+        </div>
+
+        <div id="yard">
         <section class="yard_work">
             <img class="rocks" src="images/rocks-1000x500.jpeg" alt="rocks in photo">
             <section class="msg2">
-            <h1>What we strive for!</h1>
+            <h2>What we strive for!</h2>
             <ul>
                 <li>Any time of the year, Magic touch is devoted to help those who are wanting to make a difference on their property. We don't just do the basics, we do what-ever it takes so that your home will look the way you always wanted it to be! </li>
                 <li>focusing on perfection is our skill; over the last 15 years, we have devoted on making sure that every job is left to Perfection. we strive and invite all form of work. We do from the small and simple leaves removal to the hard and exciting work of tree removal. </li>
@@ -53,22 +55,22 @@
             </ul>
         </section>
         </section>
+        </div>
 </main>
 
 
 <!-- footer info. -->
 <footer>
     <p>MGT &copy; 2022 - Jose Machuca</p>
-    <p><a href="site-plan-rafting.html" >Site Plan</a></p>
     <p><a href="contactus.html" >Contact Us</a></p>
     <div class="social">
         <a href="https://facebook.com"   target="_blank">
             <img src="images/facebook.png" alt="fb icon">
         </a>
-        <a href="https://twitter.com"target="_blank">
+        <a href="https://twitter.com" target="_blank">
             <img src="images/twitter.png" alt="twitter icon">
         </a>
-        <a href="https://instagram.com"target="_blank">
+        <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
     </div>
