--- a/personal-site/index.html
+++ b/personal-site/index.html
@@ -11,7 +11,7 @@
     <!-- header code with Nav -->
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/Magic Touch.png" alt="Dry oar Logo">
+            <img class="logo" src="images/MagicTouch.png" alt="Dry oar Logo">
         </a>
         <nav>
             <a href="index.html" >Home</a>
@@ -25,7 +25,7 @@
 <!-- front banner of the home page -->
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="images/pexels-mike-b-145685-1000x 500.jpg" alt="yardwork">
+            <img id="hero-img" src="images/pexels-mike-b-145685-1000x500.jpg" alt="yardwork">
         </div>  
         <section id="-msg">
             <h2 class="home-title">Welcome to</h2>
@@ -61,7 +61,7 @@
 
 <!-- footer info. -->
 <footer>
-    <p>MGT &copy; 2022 - Jose Machuca</p>
+    <p>MGT &copy;2022 - Jose Machuca</p>
     <p><a href="contactus.html" >Contact Us</a></p>
     <p><a href="site-plan.html" >Site Plan</a></p>
     <div class="social">
