--- a/personal-site/Reference.html
+++ b/personal-site/Reference.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/Reference.css">
     <title>Reference</title>
 </head>
 <body>
      <!-- header code with Nav -->
      <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/Magic Touch.png" alt="Dry oar Logo">
+            <img class="logo" src="images/MagicTouch.png" alt="Dry oar Logo">
         </a>
         <nav>
             <a href="index.html" >Home</a>
@@ -30,28 +31,29 @@
 
 <!-- body of the page -->
     <main class="home-grid">
+        <img class="offers" src="images/reference_page-500 x 800.png" alt="references">
         <section class="whatwedo">
-            <img class="offers" src="images/reference_page-500 x 800.png" alt="references">
             <h2>What do we have to offer! :</h2>
             <p>At Magic Touch we Focus on the important things to ensure that your home looks as beautiful as it can be! Magic Touch, we pride ourselves with any type work. For many years our goal and mission is to ensure that we tailor our work to the way you want your home. So we offer various styles of work. Get an estimate today to find out how we can help.</p>
         </section>
         
+        <img class="mulch" src="images/mulch_colors.jpg" alt="colors of mulch">
+
         <section class="q_a">
-            <img class="mulch" src="images/mulch_colors.jpg" alt="colors of mulch">
-            <h2>Q&A</h2>
+             <h2>Q&A</h2>
             <p><strong>Q:</strong> Do you work everyday?</p>
             <p><strong>A:</strong>Yes! We work Monday-Sunday. You can call or send us an email with a request of when you like for us to work on your home</p>
             <p><strong>Q:</strong>Do you have a standared fee?</p>
             <p><strong>A:</strong>No all contracts are made tailored to the home of the Job site. We give an estimate of the price of the job.</p>
             <p><strong>Q:</strong>What are the color mulch you use?</p>
             <p><strong>A:</strong>we use a set of colors of mulch so you can decided which color you would like to have.</p>
-        </section>
-        <section class="est">
             <h4>Estimate are Free set an appointment here</h4>
             <div class='button-box'>
                 <a class='book' href="rates.html" >Click Here</a>
             </div>
+
         </section>
+    
 
     </main>
 
