--- a/personal-site/contact_us.html
+++ b/personal-site/contact_us.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/contact_us.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,7 @@
      <!-- header code with Nav -->
      <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/Magic Touch.png" alt="Dry oar Logo">
+            <img class="logo" src="images/MagicTouch.png" alt="company logo">
         </a>
         <nav>
             <a href="index.html" >Home</a>
@@ -23,29 +24,34 @@
     <section id="title-msg">
        <h1 class="title">Contact us</h1>
     </section>
-<img class="photo1" src="images/pexels-tirachard-kumtanom-450064-800 x 400.jpg" alt="path">
+<main id="home-grid">
+    <img class="photo1" src="images/pexels-tirachard-kumtanom-450064.jpg" alt="path">
 <img class="photo2" src="images/pexels-mali-maeder-68470-1000 x 500.jpg" alt="flower">
 </div>
-<main class="home-grid">
-        <section class="title_1"><h3>Here are best Methods of contacting us:</h3></section>
-    <section class="phone">
+        <section class="contacting_us"><h3>Here are best Methods of contacting us:</h3></section>
+    <section class="contacting">
         <h4>Set an appointment for an estimate:</h4>
-        <p>(800)222-1234</p>
-    </section>
-    <section class="cancelappoint">
+        <p class="button-box">(800)222-1234</p>
+       
         <h4>Canceling an appointment?:</h4>
         <div class='button-box'>
             <a class='book' href="#" >Click Here</a>
         </div>
-    </section>
-    <section class="invoice">
-        <h4>Invoice payment?:</h4>
-        <div class='button-box2'>
+        <h4>Canceling an appointment?:</h4>
+        <div class='button-box'>
             <a class='book' href="#" >Click Here</a>
         </div>
+            <h4>Invoice payment?:</h4>
+            <div class='button-box'>
+                <a class='book' href="#" >Click Here</a>
+            </div>
     </section>
-<section class="googlemap">
-    <a href="https://www.google.com/maps/place/24109+Ridge+Rd,+Germantown,+MD+20876/@39.2515801,-77.2334687,17z/data=!3m1!4b1!4m5!3m4!1s0x89b62af23023a40d:0x3b6a7b71e9be283f!8m2!3d39.251576!4d-77.23128">Here is our address</a>
+      
+ 
+<section id="googlemap">
+    <h4 class="map">Map Address</h4>
+    <img class="img3" src="images/Address.png" alt="Company address">
+    <a class="link" href="https://www.google.com/maps/place/24109+Ridge+Rd,+Germantown,+MD+20876/@39.2515801,-77.2334687,17z/data=!3m1!4b1!4m5!3m4!1s0x89b62af23023a40d:0x3b6a7b71e9be283f!8m2!3d39.251576!4d-77.23128" target="_blank">Here is our address</a>
 </section>
 </main>
 
