--- a/personal-site/site-plan.html
+++ b/personal-site/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/Magic Touch.png" alt="Logo image">
+      <img src="images/MagicTouch.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -128,7 +128,7 @@
         -Wanting a change how people view your home on the outside? -Any time of the year, Magic touch is devoted to help those who are wanting to make a difference on their property. We don't just do the basics, we do what-ever it takes so that your home will look the way you always wanted it to be! -focusing on perfection is our skill -over the last 15 years, we have devoted on making sure that every job is left to Perfection. we strive and invite all form of work. We do from the small and simple leaves removal to the hard and exciteing work of tree removal. -All seasons of the year is the name of the Game. -It may seem like landscaping is only for a certain time of year, but here at Magic touch Landscaping, We believe in having work done all time of the year. From our Summer cut, Fall leaves pickup speical, Winter soval, to the best of all, our spring cleanup season! Magic touch is commited to ensure your home will always remain ALL YEAR round. 
       </p>
       <p>Images for the Home page</p>
-        <img src="images/pexels-mike-b-145685-1000x 500.jpg" alt="image for homepage">
+        <img src="images/pexels-mike-b-145685-1000x500.jpg" alt="image for homepage">
         <img src="images/rocks-1000x500.jpeg" alt="image for homepage">
 
       </ul>
