--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
-<h1>Welcome to WDD130 Web Projects</h1>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<header>
+    <img class="logo" src="personal-site/images/JOSE MACHUCA.png" alt="">
+    <h1 class="title">Welcome to WDD130 Web Projects</h1>
 <nav>
+ 
     <a href="aboutme/index.html">About Me Page</a>
     <a href="wwr/index.html">White Water Rafting Website</a>
     <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
@@ -7,3 +22,8 @@
     <a href="personal-site/index.html">Personal Website</a>
     <a href="personal-site/site-plan.html">Personal Siteplan</a>
 </nav>
+</header>
+<body>
+    
+</body>
+</html>
