--- a/personal-site/contact_us.html
+++ b/personal-site/contact_us.html
@@ -26,8 +26,7 @@
     </section>
 <main id="home-grid">
     <img class="photo1" src="images/pexels-tirachard-kumtanom-450064.jpg" alt="path">
-<img class="photo2" src="images/pexels-mali-maeder-68470-1000 x 500.jpg" alt="flower">
-</div>
+<img class="photo2" src="images/pexels-mali-maeder-68470-1000x500.jpg" alt="flower">
         <section class="contacting_us"><h3>Here are best Methods of contacting us:</h3></section>
     <section class="contacting">
         <h4>Set an appointment for an estimate:</h4>
@@ -46,8 +45,6 @@
                 <a class='book' href="#" >Click Here</a>
             </div>
     </section>
-      
- 
 <section id="googlemap">
     <h4 class="map">Map Address</h4>
     <img class="img3" src="images/Address.png" alt="Company address">
@@ -65,10 +62,10 @@
         <a href="https://facebook.com"   target="_blank">
             <img src="images/facebook.png" alt="fb icon">
         </a>
-        <a href="https://twitter.com"target="_blank">
+        <a href="https://twitter.com" target="_blank">
             <img src="images/twitter.png" alt="twitter icon">
         </a>
-        <a href="https://instagram.com"target="_blank">
+        <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
     </div>
