--- a/personal-site/contact_us.html
+++ b/personal-site/contact_us.html
@@ -36,7 +36,7 @@
         <div class='button-box'>
             <a class='book' href="#" >Click Here</a>
         </div>
-        <h4>Canceling an appointment?:</h4>
+        <h4>Want to send a referal?:</h4>
         <div class='button-box'>
             <a class='book' href="#" >Click Here</a>
         </div>
